// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSelectableTemplateSitewideOptions different configurations are formatted with ouiSelectableTemplateSitewideFormatOptions() 1`] = `
Array [
  Object {
    "append": <OuiAvatar
      name="Default Space"
      size="s"
      type="space"
    />,
    "aria-label": "aria-label",
    "avatar": Object {
      "name": "Default Space",
    },
    "className": "ouiSelectableTemplateSitewide__listItem testClass1 testClass2",
    "data-test-subj": "test-this",
    "key": "Basic data application",
    "label": "Basic data application",
    "meta": Array [
      Object {
        "text": "Application",
        "type": "application",
      },
    ],
    "prepend": undefined,
    "title": "Basic data application • Application",
    "url": "welcome-dashboards",
  },
  Object {
    "append": undefined,
    "className": "ouiSelectableTemplateSitewide__listItem",
    "icon": Object {
      "type": "user",
    },
    "key": "Platform with deployment highlighted",
    "label": "Platform with deployment highlighted",
    "meta": Array [
      Object {
        "text": "Account",
        "type": "platform",
      },
      Object {
        "highlightSearchString": true,
        "text": "personal-databoard",
        "type": "deployment",
      },
    ],
    "prepend": <OuiIcon
      color="subdued"
      size="l"
      type="user"
    />,
    "title": "Platform with deployment highlighted • Account, personal-databoard",
  },
  Object {
    "append": undefined,
    "className": "ouiSelectableTemplateSitewide__listItem",
    "icon": Object {
      "color": "accent",
      "type": "alert",
    },
    "key": "Other metas",
    "label": "Other metas",
    "meta": Array [
      Object {
        "text": "Article",
        "type": "article",
      },
      Object {
        "text": "Case",
        "type": "case",
      },
      Object {
        "text": "Text",
      },
      Object {
        "text": "I have a custom type",
        "type": "PINK",
      },
    ],
    "prepend": <OuiIcon
      color="accent"
      size="l"
      type="alert"
    />,
    "searchableLabel": "Totally custom with pink metadata",
    "title": "Other metas • Article, Case, Text, I have a custom type",
  },
]
`;

exports[`OuiSelectableTemplateSitewideOptions different configurations are rendered with ouiSelectableTemplateSitewideRenderOptions() 1`] = `
<React.Fragment>
  <OuiHighlight
    className="ouiSelectableTemplateSitewide__listItemTitle"
    search=""
  >
    Basic data application
  </OuiHighlight>
  <span
    className="ouiSelectableTemplateSitewide__optionMetasList"
  >
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--application ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="application"
    >
      Application
    </OuiHighlight>
  </span>
</React.Fragment>
`;

exports[`OuiSelectableTemplateSitewideOptions different configurations are rendered with ouiSelectableTemplateSitewideRenderOptions() 2`] = `
<React.Fragment>
  <OuiHighlight
    className="ouiSelectableTemplateSitewide__listItemTitle"
    search=""
  >
    Platform with deployment highlighted
  </OuiHighlight>
  <span
    className="ouiSelectableTemplateSitewide__optionMetasList"
  >
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--platform ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="platform"
    >
      Account
    </OuiHighlight>
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--deployment ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="deployment"
    >
      personal-databoard
    </OuiHighlight>
  </span>
</React.Fragment>
`;

exports[`OuiSelectableTemplateSitewideOptions different configurations are rendered with ouiSelectableTemplateSitewideRenderOptions() 3`] = `
<React.Fragment>
  <OuiHighlight
    className="ouiSelectableTemplateSitewide__listItemTitle"
    search=""
  >
    Other metas
  </OuiHighlight>
  <span
    className="ouiSelectableTemplateSitewide__optionMetasList"
  >
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--article ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="article"
    >
      Article
    </OuiHighlight>
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--case ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="case"
    >
      Case
    </OuiHighlight>
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta"
      search=""
    >
      Text
    </OuiHighlight>
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--PINK ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="PINK"
    >
      I have a custom type
    </OuiHighlight>
  </span>
</React.Fragment>
`;

exports[`OuiSelectableTemplateSitewideOptions different configurations are rendered with ouiSelectableTemplateSitewideRenderOptions() and search text 1`] = `
<React.Fragment>
  <OuiHighlight
    className="ouiSelectableTemplateSitewide__listItemTitle"
    search="data"
  >
    Basic data application
  </OuiHighlight>
  <span
    className="ouiSelectableTemplateSitewide__optionMetasList"
  >
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--application ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="application"
    >
      Application
    </OuiHighlight>
  </span>
</React.Fragment>
`;

exports[`OuiSelectableTemplateSitewideOptions different configurations are rendered with ouiSelectableTemplateSitewideRenderOptions() and search text 2`] = `
<React.Fragment>
  <OuiHighlight
    className="ouiSelectableTemplateSitewide__listItemTitle"
    search="data"
  >
    Platform with deployment highlighted
  </OuiHighlight>
  <span
    className="ouiSelectableTemplateSitewide__optionMetasList"
  >
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--platform ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="platform"
    >
      Account
    </OuiHighlight>
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--deployment ouiSelectableTemplateSitewide__optionMeta"
      search="data"
      type="deployment"
    >
      personal-databoard
    </OuiHighlight>
  </span>
</React.Fragment>
`;

exports[`OuiSelectableTemplateSitewideOptions different configurations are rendered with ouiSelectableTemplateSitewideRenderOptions() and search text 3`] = `
<React.Fragment>
  <OuiHighlight
    className="ouiSelectableTemplateSitewide__listItemTitle"
    search="data"
  >
    Other metas
  </OuiHighlight>
  <span
    className="ouiSelectableTemplateSitewide__optionMetasList"
  >
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--article ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="article"
    >
      Article
    </OuiHighlight>
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--case ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="case"
    >
      Case
    </OuiHighlight>
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta"
      search=""
    >
      Text
    </OuiHighlight>
    <OuiHighlight
      className="ouiSelectableTemplateSitewide__optionMeta--PINK ouiSelectableTemplateSitewide__optionMeta"
      search=""
      type="PINK"
    >
      I have a custom type
    </OuiHighlight>
  </span>
</React.Fragment>
`;
